kubernetes/00-namespace.yaml
# /kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doc-intel-app
