kubernetes/03-auth-deployment.yaml
# /kubernetes/03-auth-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: doc-intel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: asia-south1-docker.pkg.dev/doc-intelligence-1758210325/document-intelligence-containers/auth-service:IMAGE_TAG
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"      # 0.1 CPU cores
            memory: "256Mi"  # 256 MB RAM
          limits:
            cpu: "500m"      # Max 0.5 CPU cores
            memory: "512Mi"  # Max 512 MB RAM
        readinessProbe:
          httpGet:
            path: /auth/health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /auth/health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: doc-intel-app
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
